spring boot: actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8586
+info.app.name=my springboot demo
+info.app.description=springframework boot demo
+management.endpoints.web.exposure.include=*
+
