--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,6 @@ server.port=8586
 info.app.name=my springboot demo
 info.app.description=springframework boot demo
 management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.exclude=info,health
+
 
