spring boot: properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 server.port=8586
+server.servlet.context-path=/SpringBootDemo
+
 info.app.name=my springboot demo
 info.app.description=springframework boot demo
 management.endpoints.web.exposure.include=*
 #management.endpoints.web.exposure.exclude=info,health
+
+coach.name=Micky Mouse
+team.name=The Mouse Club
+
 
 
