--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,13 @@ server.servlet.context-path=/SpringBootDemo
 
 info.app.name=my springboot demo
 info.app.description=springframework boot demo
-management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=*
 #management.endpoints.web.exposure.exclude=info,health
 
 coach.name=Micky Mouse
 team.name=The Mouse Club
 
-
-
+#JDBC properties
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=cmn
+spring.datasource.password=12345678
