spring boot: spring data rest

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ team.name=The Mouse Club
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=cmn
 spring.datasource.password=12345678
+
+spring.data.rest.base-path=/magic-api
+spring.data.rest.default-page-size=20
